syntax = "proto3";
package grpc_service;

import "google/protobuf/timestamp.proto";

option go_package = "./grpc_service";

service Product {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int32 id = 1;
}

message ProductResponse {
  string name = 2;
  string sku = 3;
  string description = 4;
  float price = 5;

  enum MarketType {
    CLOTHES = 0;
    FOOD = 1;
    ELECTRONIC = 2;
  }

  message Department {
    string number = 1;
    MarketType type = 2;
  }

  repeated Department numbers = 6;

  google.protobuf.Timestamp last_updated = 7;
}

